separeted authorities